--- a/less/rascal.less
+++ b/less/rascal.less
@@ -141,6 +141,10 @@ html, body, #phpbb-cron-thingy, #phpbb { /* counteracting phpBB's attempt to for
     background-color: @rascal-white;
 }
 
+body {
+    padding-top: 0px;
+}
+
 ul.forums {
     background-color: @rascal-white;
     background-image: none;
